# rust-typer-site

./: Cargo.toml  _config.yml  generate_files_json.sh  index.html
_layouts/: default.html
_site/: index.html
_site/assets/css/: gruvbox.css
_site/assets/data/: files.json
_site/assets/js/: typer.js
_site/assets/pkg/: package.json  rust_typer.d.ts  rust_typer_bg.wasm  rust_typer_bg.wasm.d.ts
_site/pkg/: rust_typer.d.ts  rust_typer.js  rust_typer_bg.wasm  rust_typer_bg.wasm.d.ts
_site/src/: lib.rs
_site/static/: index.html
_site/static/js/: index.js
assets/css/: gruvbox.css
assets/data/: files.json  test.rs
assets/js/: typer.js
src/: lib.rs
static/: index.html
