[package]
name = "rust-typer"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }  # Use getrandom with js feature for WebAssembly
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
